# watercooler-cloud

./: .cursorrules  .gitattributes  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  CLI_PARITY_AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_ANALYSIS.md  IMPLEMENTATION_PLAN.md  L5_MCP_PLAN.md  LICENSE  MCP_SERVER_READY.md  PHASE1_REVIEW.md  PHASE2_REVIEW.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  TESTING.md  TESTING_CHECKLIST.md  check-mcp-servers.sh  cleanup-mcp-servers.sh  fastmcp.json  pyproject.toml  server.py  test_client_id.py  test_mcp_call.py  test_mcp_full.py  test_mcp_resources.py  test_mcp_tools.py  test_sync_stdio.py  test_sync_stdio_diagnostic.py  test_sync_via_client.py  test_sync_windows.py  tmp.md
.claude/agents/: technical-documentation-specialist.md
.githooks/: pre-commit
.github/: CODEOWNERS  WATERCOOLER_SETUP.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  reactivation-playbook.md
.github/workflows/: branch-pairing-audit.yml  ci.yml  claude-code-review.yml  release.yml
.mothballed/: README.md
.mothballed/cloudflare-worker/: ARCHIVED.md  package.json
.mothballed/cloudflare-worker/scripts/: README.md  deploy.sh  get-token.sh  test-security.sh
.mothballed/docs/: CLOUDFLARE_REMOTE_MCP_PLAYBOOK__v1.md  CLOUD_SYNC_ARCHITECTURE.md  CLOUD_SYNC_STRATEGY.md  Cloudflare_Remote_MCP_Playbook_AUTH_FIRST_PROXY_FIRST__v2.md  DEPLOYMENT.md  DUAL_STACK_DEPLOYMENT.md  EXECUTION_PLAN.md  NEW_REPO_MIGRATION_AND_DEPLOYMENT.md  OPERATOR_RUNBOOK.md  PRODUCTION_REPO_SANITIZATION_AND_DEPLOYMENT.md  REMOTE_MCP_QUICKSTART.md
.mothballed/tests/: test_http_facade_acl.py  test_http_facade_auth.py
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  graph-first-architecture-gaps.md  install_script_improvements.md  project_overview.md  suggested_commands.md  sync-branch-state-merge-bug-fix.md  task_completion_checklist.md
.watercooler/: FROM_CLOUD_FOR_REF__wc-staging-list-projects-failure.md  agent-ux-test.md  agents.json  cloud-sync-strategy.md  cloudflare-remote-mcp-auth-proxy.md  cloudflare-vs-fastmcp-cloud.md  cloudflare-worker-oauth-secrets-undefined.md  codex-validation.md  debugging-session-git-sync.md  documentation-sprint-complete.md  git-integration-project-repos.md  hypergraph-integration.md  index.html  index.md  install-script-refinement.md  mcp-testing.md  oauth-and-acl.md  phase1a-mcp-complete.md  phase2a-git-sync-implementation.md  smoke.md  topic.md  watercooler-cloud-ux.md
cloudflare-worker/: .gitignore  package-lock.json  package.json  wrangler.toml
cloudflare-worker/scripts/: README.md  deploy.sh  seed-acl.sh  set-secrets.sh  tail-logs.sh
cloudflare-worker/src/: index.ts
docs/: AGENT_REGISTRY.md  ANALYSIS_TOOL_IMPROVEMENTS.md  ARCHITECTURE.md  AUTHENTICATION.md  BRANCH_PAIRING.md  CHATGPT_MCP_INTEGRATION.md  CLAUDE_CODE_SETUP.md  CLAUDE_DESKTOP_SETUP.md  CLI_REFERENCE.md  CLOUDFLARE_REMOTE_MCP_PLAYBOOK__v1.md  CLOUD_SYNC_GUIDE.md  CLOUD_SYNC_STRATEGY.md  CONFIGURATION.md  CONTRIBUTING.md  Cloudflare_Remote_MCP_Playbook_AUTH_FIRST_PROXY_FIRST__v2.md  DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  DESIGN_OVERVIEW.md  DUAL_STACK_DEPLOYMENT.md  ENVIRONMENT_VARS.md  EXECUTION_PLAN.md  FAQ.md  GRAPHITI_SETUP.md  GRAPH_SYNC.md  INSTALLATION.md  LEANRAG_SETUP.md  LOCAL_QUICKSTART.md  MEMORY.md  MEMORY_BACKEND_STATUS.md  MIGRATION.md  NEW_REPO_MIGRATION_AND_DEPLOYMENT.md  OPERATOR_RUNBOOK.md  PRODUCTION_REPO_SANITIZATION_AND_DEPLOYMENT.md  QUICKSTART.md  README.md  REMOTE_MCP_QUICKSTART.md  SETUP_AND_QUICKSTART.md  SMOKE_TESTS.md  STRUCTURED_ENTRIES.md  TEMPLATES.md  (+12 more)
docs/adr/: 0001-memory-backend-contract.md
docs/archive/: AGENT_REGISTRY.md  CLAUDE_CODE_SETUP.md  CLAUDE_DESKTOP_SETUP.md  README.md  SETUP_AND_QUICKSTART.md  TEMPLATES.md  TESTER_SETUP.md  USE_CASES.md  claude-collab.md  integration.md
docs/examples/: BACKEND_USAGE.md
docs/planning/: UNIFIED_CONFIG_PLAN.md
schemas/: README.md  thread_entry.schema.json  watercooler_thread.schema.json
scripts/: README.md  build_memory_graph.py  debug_episodes.py  discover_projects.sh  git-credential-watercooler  index_graphiti.py  index_leanrag.py  install-mcp.ps1  install-mcp.sh  kv_cleanup.sh  kv_seed_projects.json  kv_setup.sh  mcp-server-daemon.sh  start_services.sh  test_leanrag_query.py  visualize_graph.py
src/watercooler/: __init__.py  agents.py  cli.py  commands.py  config.py  config_facade.py  config_loader.py  config_schema.py  constants.py  credentials.py  fs.py  header.py  lock.py  metadata.py  path_resolver.py  schema_validation.py  templates.py  testing.py  thread_entries.py
src/watercooler_mcp/: __init__.py  __main__.py  branch_parity.py  config.py  git_sync.py  http_facade.py  memory.py  observability.py  provisioning.py  server.py  server.py.bak
src/watercooler_memory/: __init__.py  cache.py  chunker.py  embedding_server.py  embeddings.py  graph.py  leanrag_export.py  local_server.py  parser.py  schema.py  summarizer.py  validation.py
tests/: conftest.py  test_agents.py  test_backend_smoke.py  test_backend_unit.py  test_backends_protocol.py  test_baseline_graph.py  test_baseline_graph_odometer.py  test_baseline_graph_reader.py  test_baseline_graph_search.py  test_baseline_graph_sync.py  test_branch_parity.py  test_branch_sync.py  test_cli.py  test_cli_handoff.py  test_cli_init_thread.py  test_cli_list.py  test_cli_reindex_search.py  test_cli_say_ack.py  test_cli_setters.py  test_cli_unlock.py  test_cli_web_export.py  test_config.py  test_config_facade.py  test_config_integration.py  test_config_loader.py  test_config_resolver.py  test_config_schema.py  test_config_testing_utils.py  test_credential_helper.py  test_credential_helper_path.py  test_credentials.py  test_fs.py  test_git_sync.py  test_git_sync_integration.py  test_header.py  test_http_facade_acl.py  test_http_facade_auth.py  test_leanrag_backend.py  test_leanrag_integration.py  test_leanrag_phase2.py  (+17 more)
tests/.cli-threads/: index.html  index.md  topic.md
tests/tmp_threads/: alpha.md
watercooler/: index.html  index.md  topic.md
(+43 files in other folders)
